--- a/ts4/test/colorsize.html
+++ b/ts4/test/colorsize.html
@@ -2,6 +2,8 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no" />
 	<style>
 		.svgRec1 {
 			fill: #cc00ff;
@@ -16,6 +18,7 @@
 </head>
 
 <body>
+	<p>v1.01</p>
 	<svg id="tileLevelSVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
 		<rect id="rectangle1" class="svgRec1" width="100" height="100" />
