--- a/ts4/test/colorsize.html
+++ b/ts4/test/colorsize.html
@@ -5,26 +5,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no" />
 	<style>
+		:root {
+			--tapSize: 77px;
+			--divColor: #669900;
+			--tapSize1: 1cm;
+		}
 		.svgRec1 {
 			fill: #cc00ff;
 		}
-
 		.divRec1 {
-			background-color: #669900;
-			width: 1cm;
-			height: 1cm;
+			background-color: var(--divColor);
+			width:var(--tapSize1);
+			height:var(--tapSize1);
 		}
 	</style>
 </head>
 
 <body>
-	<p>v1.01</p>
+	<p>v1.02</p>
 	<svg id="tileLevelSVG" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
 		<rect id="rectangle1" class="svgRec1" width="100" height="100" />
 
 	</svg>
-	<div class="divRec1">
+	<div class="divRec1 width1tap height1tap">
 		test
 	</div>
 	<p id="info">
@@ -52,6 +56,9 @@
 
 	console.log('tapSize', tapSize);
 	console.log('', window.screen);
+
+	document.documentElement.style.setProperty('--divColor', '#996633');
+	document.documentElement.style.setProperty('--tapSize1', ''+(3*tapSize)+'px');
 
 	info.innerHTML = 'tapSize ' + tapSize + '<br/>'
 		+ 'avail ' + window.screen.availWidth + 'x' + window.screen.availHeight + '<br/>'
