--- a/ts4/web/index.html
+++ b/ts4/web/index.html
@@ -15,6 +15,8 @@
     <svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
         xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
+        <g id='backgroundLayer'></g>
+
         <g id='debugLayer'></g>
 
     </svg>
