--- a/ts4/web/index.html
+++ b/ts4/web/index.html
@@ -16,7 +16,7 @@
         xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
         <g id='backgroundLayer'></g>
-
+		<g id='mixerLayer'></g>
         <g id='debugLayer'></g>
 
     </svg>
