--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -1,29 +1,29 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
 
-    <script type='text/javascript' src='./js/mzxbx.js'></script>
-    <script type='text/javascript' src='./js/application.js'></script>
-    <script type='text/javascript' src='./web/plugins/catalog.js'></script>
-    <script type='text/javascript' src='./js/tilerender.js'></script>
+	<script type='text/javascript' src='./js/mzxbx.js'></script>
+	<script type='text/javascript' src='./js/application.js'></script>
+	<script type='text/javascript' src='./web/plugins/catalog.js'></script>
+	<script type='text/javascript' src='./js/tilerender.js'></script>
 
-    <link rel="stylesheet" type="text/css" href="theme/base.css">
+	<link rel="stylesheet" type="text/css" href="theme/base.css">
 </head>
 
 <body>
-    <svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
-        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+	<svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
-        <g id='backgroundLayer'></g>
-		<g id='mixerLayer'></g>
-        <g id='debugLayer'></g>
+		<g id='backgroundLayer' />
+		<g id='toolBarPanelGroup' />
+		<g id='mixerLayer' />
+		<g id='debugLayer' />
 
-    </svg>
+	</svg>
 </body>
 <script>
-    console.log('start page v1.01');
-    startApplication();
+	console.log('start page v1.01');
+	startApplication();
 </script>
 
 </html>
