--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -15,8 +15,10 @@
 	<svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
 		<g id='backgroundLayer' />
-		<g id='toolBarPanelGroup' />
+		
 		<g id='mixerLayer' />
+		<g id='toolBarPanelGroup' />
+		<g id='menuPanelGroup' />
 		<g id='debugLayer' />
 
 	</svg>
