--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -18,7 +18,9 @@
 		
 		<g id='mixerLayer' />
 		<g id='toolBarPanelGroup' />
-		<g id='menuPanelGroup' />
+		<g id='menuPanelBackground' />
+		<g id='menuPanelContent' />
+		<g id='menuPanelInteraction' />
 		<g id='debugLayer' />
 
 	</svg>
