--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -29,7 +29,7 @@
 		<g id='menuPanelBackground' />
         <g id='menuPanelInteraction' />
 		<g id='menuPanelContent' />
-        
+        <g id='menuPanelButtons' />
 		
 
 	</svg>
