--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -10,9 +10,11 @@
 	<script type='text/javascript' src='./web/plugins/catalog.js'></script>
 	<script type='text/javascript' src='./js/tilerender.js'></script>
 
+    <link rel="stylesheet" type="text/css" href="theme/vars.css">
 	<link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
-	<link rel="stylesheet" type="text/css" href="theme/base.css">
-	
+    <link rel="stylesheet" type="text/css" href="theme/base.css">
+    <link rel="stylesheet" type="text/css" href="theme/menu.css">
+	<link rel="stylesheet" type="text/css" href="theme/toolbar.css">
 </head>
 
 <body>
