--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -10,7 +10,9 @@
 	<script type='text/javascript' src='./web/plugins/catalog.js'></script>
 	<script type='text/javascript' src='./js/tilerender.js'></script>
 
-    <link rel="stylesheet" type="text/css" href="theme/vars.css">
+    <link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
+    <link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
+    <link rel="stylesheet" type="text/css" href="theme/font1.css">
 	<link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
