--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -16,7 +17,8 @@
 	<link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
-	<link rel="stylesheet" type="text/css" href="theme/toolbar.css">
+    <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
+    <link rel="stylesheet" type="text/css" href="theme/mixer.css">
 </head>
 
 <body>
@@ -24,8 +26,18 @@
 
 		<g id='backgroundLayer' />
 		
-        <g id='mixerLayer' />
-
+        <!--<g id='mixerLayer' />-->
+        <g id='tracksLayerZoom025' />
+        <g id='tracksLayerZoom05' />
+        <g id='tracksLayerZoom1' />
+        <g id='tracksLayerZoom2' />
+        <g id='tracksLayerZoom4' />
+        <g id='tracksLayerZoom8' />
+        <g id='tracksLayerZoom16' />
+        <g id='tracksLayerZoom32' />
+        <g id='tracksLayerZoom64' />
+        <g id='tracksLayerZoom128' />
+        
         <g id='debugLayer' />
         
         <g id='toolBarPanelGroup' />
