--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -27,6 +27,7 @@
 <body>
     <div id='pagediv'>
         <input type="file" id="file_midi_input" accept="audio/midi, audio/x-midi" />
+		<!--
         <div id='warningDialog'>
             <div>
                 <div id='warningIcon'>&#xf1f5;</div>
@@ -34,6 +35,7 @@
                 <div id='warningText'>Qwerty asdfg 123</div>
             </div>
         </div>
+		-->
         <svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
@@ -60,7 +62,7 @@
             <g id='menuPanelContent' />
             <g id='menuPanelButtons' />
 
-
+			<g id='warningDialogGroup' />
         </svg>
         <script>
             console.log('start page v1.01');
