--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
     <link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
-    <link rel="stylesheet" type="text/css" href="theme/font1.css">
+    <link rel="stylesheet" type="text/css" href="theme/font1small.css">
     <link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
