--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -52,6 +52,7 @@
             <g id='tracksLayerZoom32' />
             <g id='tracksLayerZoom64' />
             <g id='tracksLayerZoom128' />
+            /<!--<g id='tracksLayerZoom256' />-->
 
             <g id='debugLayer' />
 
