--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -40,8 +40,8 @@
             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
             <g id='backgroundLayer' />
-
-            <!--<g id='mixerLayer' />-->
+            <g id='tracksLayerZoom' />
+            <!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
             <g id='tracksLayerZoom05' />
             <g id='tracksLayerZoom1' />
@@ -52,7 +52,7 @@
             <g id='tracksLayerZoom32' />
             <g id='tracksLayerZoom64' />
             <g id='tracksLayerZoom128' />
-            /<!--<g id='tracksLayerZoom256' />-->
+            <g id='tracksLayerZoom256' />-->
 
             <g id='debugLayer' />
 
