--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -53,6 +53,7 @@
             <g id='tracksLayerZoom64' />
             <g id='tracksLayerZoom128' />
             <g id='tracksLayerZoom256' />-->
+			<g id='leftLayerZoom' />
 
             <g id='debugLayer' />
 
