--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
     <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
     <link rel="stylesheet" type="text/css" href="theme/mixer.css">
+    <link rel="stylesheet" type="text/css" href="theme/timeselect.css">
 </head>
 
 <body>
@@ -41,6 +42,7 @@
 
             <g id='backgroundLayer' />
             <g id='tracksLayerZoom' />
+            <g id='timeselectbar' />
             <!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
             <g id='tracksLayerZoom05' />
@@ -53,7 +55,8 @@
             <g id='tracksLayerZoom64' />
             <g id='tracksLayerZoom128' />
             <g id='tracksLayerZoom256' />-->
-			<g id='leftLayerZoom' />
+            <g id='leftLayerZoom' />
+            
 
             <g id='debugLayer' />
 
