--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
+	<link rel="stylesheet" type="text/css" href="theme/leftbar.css">
     <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
     <link rel="stylesheet" type="text/css" href="theme/mixer.css">
     <link rel="stylesheet" type="text/css" href="theme/timeselect.css">
