--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -21,25 +21,26 @@
 		<button onclick='clickHop();'>hop</button>
 		<button onclick='toggleFirst();'>first</button>
 		<button onclick='clickClearLines();'>clear</button>
-	
+		<br/>
 		<button onclick='clickGoSkip(-100);'>+100</button>
 		<button onclick='clickGoSkip(-5);'>+5</button>
 		<button onclick='clickGoSkip(-1);'>+1</button>
-		
-		<br/>
-		
 		<button onclick='clickGoSkip(1);'>-1</button>
 		<button onclick='clickGoSkip(5);'>-5</button>
 		<button onclick='clickGoSkip(100);'>-100</button>
-	
+		
 		<button onclick='toggleRatioPre();'>light</button>
 		<button onclick='addTails();'>tail</button>
+		<br/>
 		<button onclick='moreReduceRatio();'>+step</button>
 		<span id='stepsize'>+step</span>
 		<button onclick='lessReduceRatio();'>-step</button>
 		<button onclick='moreCalcLen();'>+len</button>
 		<span id='calcLen'>+len</span>
 		<button onclick='lessCalcLen();'>-len</button>
+		<button onclick='moreWide();'>+w</button>
+		<span id='calcWide'>wwww</span>
+		<button onclick='lessWide();'>-w</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
