--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
-	<link rel="stylesheet" type="text/css" href="theme/leftbar.css">
+	
     <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
     <link rel="stylesheet" type="text/css" href="theme/mixer.css">
     <link rel="stylesheet" type="text/css" href="theme/timeselect.css">
@@ -44,6 +44,7 @@
             <g id='backgroundLayer' />
             <g id='tracksLayerZoom' />
             <g id='timeselectbar' />
+            <g id='leftsidebar' />
             <!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
             <g id='tracksLayerZoom05' />
@@ -56,7 +57,6 @@
             <g id='tracksLayerZoom64' />
             <g id='tracksLayerZoom128' />
             <g id='tracksLayerZoom256' />-->
-            <g id='leftLayerZoom' />
             
 
             <g id='debugLayer' />
