--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -29,6 +29,7 @@
 <body>
     <div id='pagediv'>
         <input type="file" id="file_midi_input" accept="audio/midi, audio/x-midi" />
+		<input type="file" id="file_test_input" />
 		<!--
         <div id='warningDialog'>
             <div>
