--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -11,6 +11,18 @@
 			width:1.5cm;
 			height:1cm;
 		}
+		#statblue{
+			color: #0033cc;
+		}
+		#statgreen{
+			color: #339900;
+		}
+		#statgrey{
+			color: #666666;
+		}
+		#statwhite{
+			color: #000000;
+		}
 	</style>
 </head>
 
@@ -41,6 +53,11 @@
 		<button onclick='moreWide();'>+w</button>
 		<span id='calcWide'>wwww</span>
 		<button onclick='lessWide();'>-w</button>
+		<br/>
+		<span id='statwhite'>white</span>
+		<span id='statblue'>blue</span>
+		<span id='statgreen'>green</span>
+		<span id='statgrey'>grey</span>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
