--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -13,12 +13,15 @@
 		}
 		#statblue{
 			color: #0033cc;
+			font-size: small;
 		}
 		#statgreen{
 			color: #339900;
+			font-size: small;
 		}
 		#statgrey{
 			color: #666666;
+			font-size: small;
 		}
 
 	</style>
@@ -52,8 +55,6 @@
 		<span id='calcWide'>wwww</span>
 		<button onclick='lessWide();'>-w</button>
 		<br/>
-        <span id='statwhite'>white</span>
-        <br/>
         <span id='statblue'>blue</span>
         <br/>
         <span id='statgreen'>green</span>
