--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -45,7 +45,9 @@
             <g id='backgroundLayer' />
             
             <g id='timeselectbar' />
-            <g id='tracksLayerZoom' />
+            <g id='gridLayerZoom' />
+			<g id='tracksLayerZoom' />
+			<g id='firstLayerZoom' />
             <g id='leftsidebar' />
             <!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
