--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -33,6 +33,7 @@
 	
 		<button onclick='clickHop();'>hop</button>
 		<button onclick='toggleFirst();'>first</button>
+		<button onclick='toggleWide();'>wide</button>
 		<button onclick='clickClearLines();'>clear</button>
 		<br/>
 		<button onclick='clickGoSkip(-100);'>+100</button>
