--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -62,8 +62,8 @@
         <br/>
 		<span id='statgrey'>grey</span>
 	</p>
-	<svg id='svgpane' width="1300" height="5000">
-		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
+	<svg id='svgpane' width="1700" height="2000">
+		<rect width="1300" height="5000" rx="20" ry="20" fill="#ffe" />
 		<g id='levelA'></g>
 		<g id='linesLevel'></g>
 		<rect id="fogRect" x="0" y="0" width="1300" height="5000" onclick="clickFog(event);"/>
