--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -70,9 +70,13 @@
 		<rect id="lineMark" width="1" height="1" x="0" y="0" fill="#ff9900cc" />
 	</svg>
 	<p>
-		<button onclick='clickHop();'>hop</button>
+        <button onclick='clickHop();'>hop</button>
+        <button onclick='clickGoSkip(-5);'>+5</button>
 		<button onclick='clickGoSkip(-1);'>+1</button>
-		<button onclick='clickGoSkip(1);'>-1</button>
+        <button onclick='clickGoSkip(1);'>-1</button>
+        <button onclick='clickGoSkip(5);'>-5</button>
+        <button onclick='moreReduceRatio();'>+step</button>
+		<button onclick='lessReduceRatio();'>-step</button>
 	</p>
 	<script src="a749data.js"></script>
 	<!--<script src="d645data.js"></script>-->
