--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -74,8 +74,12 @@
 	</svg>
 	<p>
 		<button onclick='clickHop();'>hop</button>
+		<button onclick='clickGoSkip(-5);'>+5</button>
 		<button onclick='clickGoSkip(-1);'>+1</button>
 		<button onclick='clickGoSkip(1);'>-1</button>
+		<button onclick='clickGoSkip(5);'>-5</button>
+        <button onclick='moreReduceRatio();'>+step</button>
+		<button onclick='lessReduceRatio();'>-step</button>
 	</p>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
