--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -8,8 +8,9 @@
 
 		}
 		button{
-			width:1.5cm;
-			height:1cm;
+			width:4cm;
+			height:2cm;
+			font-size: large;
 		}
 		#statblue{
 			color: #0033cc;
