--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -67,7 +67,7 @@
 		<span id='statgrey'>grey</span>
 	</p>
 	<svg id='svgpane' width="1700" height="1600">
-		<rect width="1300" height="5000" rx="20" ry="20" fill="#ffe" />
+		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
 		<g id='levelA'></g>
 		<g id='linesLevel'></g>
 		<rect id="fogRect" x="0" y="0" width="1300" height="5000" onclick="clickFog(event);" />
