--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -15,6 +15,7 @@
     <script type='text/javascript' src='./js/tilerender.js'></script>
 
     <link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
+    <link rel="stylesheet" type="text/css" href="theme/topbar.css">
     <link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
     <link rel="stylesheet" type="text/css" href="theme/font1small.css">
     <link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
@@ -38,7 +39,10 @@
                 <div id='warningText'>Qwerty asdfg 123</div>
             </div>
         </div>
-		-->
+        -->
+        <div id="topbox">
+            <iframe id="innerframe" src="web/test/test.html"></iframe>
+        </div>
         <svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
