--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="theme/font1small.css">
     <link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
     <link rel="stylesheet" type="text/css" href="theme/base.css">
+	<link rel="stylesheet" type="text/css" href="theme/sampler.css">
     <link rel="stylesheet" type="text/css" href="theme/menu.css">
 	<link rel="stylesheet" type="text/css" href="theme/leftbar.css">
     <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
@@ -51,8 +52,9 @@
             <g id='timeselectbar' />
             <g id='gridLayerZoom' />
 			<g id='tracksLayerZoom' />
+			<g id='leftsidebar' />
 			<g id='firstLayerZoom' />
-            <g id='leftsidebar' />
+            
             <!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
             <g id='tracksLayerZoom05' />
