--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -26,6 +26,8 @@
     <link rel="stylesheet" type="text/css" href="theme/toolbar.css">
     <link rel="stylesheet" type="text/css" href="theme/mixer.css">
     <link rel="stylesheet" type="text/css" href="theme/timeselect.css">
+
+	<title>ZvoogHub</title>
 </head>
 
 <body>
