--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -80,7 +80,11 @@
 		<button onclick='clickGoSkip(1);'>-1</button>
 		<button onclick='clickGoSkip(5);'>-5</button>
         <button onclick='moreReduceRatio();'>+step</button>
-		<button onclick='lessReduceRatio();'>-step</button>
+        <button onclick='lessReduceRatio();'>-step</button>
+		<button onclick='moreCalcLen();'>+len</button>
+		<button onclick='lessCalcLen();'>-len</button>
+		<button onclick='moreWide();'>+w</button>
+		<button onclick='lessWide();'>-w</button>
 	</p>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
