--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -84,7 +84,8 @@
 		<button onclick='moreCalcLen();'>+len</button>
 		<button onclick='lessCalcLen();'>-len</button>
 		<button onclick='moreWide();'>+w</button>
-		<button onclick='lessWide();'>-w</button>
+        <button onclick='lessWide();'>-w</button>
+        <button onclick='toggleFirst();'>first</button>
 	</p>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
