--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -86,6 +86,7 @@
 		<button onclick='moreWide();'>+w</button>
         <button onclick='lessWide();'>-w</button>
         <button onclick='toggleFirst();'>first</button>
+		<button onclick='testTest();'>test</button>
 	</p>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
