--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -33,7 +33,7 @@
 <body>
     <div id='pagediv'>
         <input type="file" id="file_midi_input" accept="audio/midi, audio/x-midi" />
-		<input type="file" id="file_test_input" />
+		<input type="file" id="file_gp35_input" accept=".gp3, .gp4, .gp5" />
 		<!--
         <div id='warningDialog'>
             <div>
