--- a/riffshareiii/web/plugins/midi/midimusicimport.html
+++ b/riffshareiii/web/plugins/midi/midimusicimport.html
@@ -18,22 +18,24 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
+	<script type='text/javascript' src='./midimusic.js'></script>
 </head>
 
 <body>
 	<h1>MIDI import</h1>
-	<p><input type="file" id="file_midi_input" accept="audio/midi, audio/x-midi" onchange="loadfile" /></p>
+	<p><input type="file" id="file_midi_input" accept="audio/midi, audio/x-midi" onchange="plugin.loadfile(this);" /></p>
 	<p>
-		<button onclick='sendTestData();'>Send data</button>
+		<button onclick='plugin.sendTestData();'>Send data</button>
 	</p>
 </body>
 <script>
+	/*
 	var callbackID = '';
 
 	function sendTestData() {
 		console.log('sendTestData');
 		var oo = {
-			id: callbackID,
+			dialog: callbackID,
 			data: {
 				bla: 'bla',
 				test: 121212
@@ -48,10 +50,18 @@
 
 	function receiveHostMessage(par) {
 		console.log('receiveHostMessage', par);
-		callbackID = par.data;
+		//callbackID = par.data;
+		try {
+			var oo = JSON.parse(par.data);
+			callbackID = oo.dialog;
+		} catch (xx) {
+			console.log(xx);
+		}
 	}
 	window.addEventListener('message', receiveHostMessage, false);
 	//console.log(this);
+	*/
+	let plugin=new MIDIIImportMusicPlugin();
 </script>
 
 </html>
