--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="initial-scale=1.0, width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no" />
 
 	<script type='text/javascript' src='./js/mzxbx.js'></script>
-
+    <script type='text/javascript' src='./js/mzxbxlib.js'></script>
 	<script type='text/javascript' src='./js/application.js'></script>
 	<script type='text/javascript' src='./web/plugins/catalog.js'></script>
 	<script type='text/javascript' src='./js/tilerender.js'></script>
