--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -57,7 +57,7 @@
 		<svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
 			<g id='backgroundLayer' />
-
+			<g id='selectedTime' />
 			<g id='timeselectbar' />
 			<g id='gridLayerZoom' />
 			<g id='tracksLayerZoom' />
