--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -66,6 +66,7 @@
 			<g id='tracksLayerZoom' />
 			<g id='leftsidebar' />
 			<g id='firstLayerZoom' />
+			<g id='fanLayer' />
 
 			<!--<g id='mixerLayer' />
             <g id='tracksLayerZoom025' />
