--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -96,6 +96,8 @@
         <button onclick='toggleFirst();'>first</button>
 		<button onclick='testTest();'>test</button>
 	</p>
+	<pre id='statdump'>
+	</pre>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
 	<script>
