--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -25,12 +25,16 @@
 		}
 
 		#statgrey {
-			color: #666666;
+			color: #333333;
 			font-size2: small;
 		}
 		
 		#statpurple {
 			color: #990099;
+			font-size2: small;
+		}
+		#statred {
+			color: #cc0000;
 			font-size2: small;
 		}
 		
@@ -83,6 +87,7 @@ margin:0;
 		
 		<pre id='statgrey'>grey</pre>
 		<pre id='statpurple'>purple</pre>
+		<pre id='statred'>purple</pre>
 	</p>
 	<svg id='svgpane' width="1700" height="1300">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#ffe" />
