--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -42,9 +42,12 @@
 			fill: #666666;
 		}
 pre{
-font-weight: bolder;
-font-size: small;
+font-weight: bold;
+font-size: medium;
+font-stretch: condensed;
 margin:0;
+padding:0;
+transform2: scaleX(0.75);
 }
 
 	</style>
