--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -37,6 +37,15 @@
 			color: #cc0000;
 			font-size2: small;
 		}
+		#statnums{
+			color: #666666;
+
+		}
+		
+		.focusedNum{
+			background-color: #ffff00;
+
+		}
 		
 .svgpane {
 			fill: #666666;
@@ -84,6 +93,8 @@ transform2: scaleX(0.75);
 		<span id='calcWide'>wwww</span>
 		<button onclick='lessWide();'>-w</button>
 		<br />
+		<pre id='statnums'>nums <span class='focusedNum'>2</span>456</pre>
+		
 		<pre id='statblue'>blue</pre>
 		
 		<pre id='statgreen'>green</pre>
