--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -94,14 +94,13 @@ transform2: scaleX(0.75);
 		<button onclick='lessWide();'>-w</button>
 		<br />
 		<pre id='statnums'>nums <span class='focusedNum'>2</span>456</pre>
-		
+		<br/>
 		<pre id='statblue'>blue</pre>
-		
 		<pre id='statgreen'>green</pre>
-		
 		<pre id='statgrey'>grey</pre>
+		<br/>
 		<pre id='statpurple'>purple</pre>
-		<pre id='statred'>purple</pre>
+		<pre id='statred'>red</pre>
 	</p>
 	<svg id='svgpane' width="1700" height="1300">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#ffe" />
