--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="theme/topbar.css">
 	<link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
 	<link rel="stylesheet" type="text/css" href="theme/font1small.css">
-	<link rel="stylesheet" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
+	<link rel="stylesheet" type="text/css" href="theme/material-design-iconic-font/css/material-design-iconic-font.css">
 	<link rel="stylesheet" type="text/css" href="theme/base.css">
 	<link rel="stylesheet" type="text/css" href="theme/sampler.css">
 	<link rel="stylesheet" type="text/css" href="theme/menu.css">
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" type="text/css" href="theme/mixer.css">
 	<link rel="stylesheet" type="text/css" href="theme/timeselect.css">
 	<link rel="stylesheet" type="text/css" href="theme/plugin.css">
-
+	<link rel="stylesheet" type="text/css" href="theme/fanpane.css">
 	
 
 	<title>ZvoogHub</title>
