--- a/riffshareiii/web/performers/simplebeep/uitester/beep1.html
+++ b/riffshareiii/web/performers/simplebeep/uitester/beep1.html
@@ -29,6 +29,7 @@
 	
 	<p>
 		<button onclick='plugin.test();'>Test</button>
+		<button onclick='plugin.set();'>Set</button>
 	</p>
 </body>
 <script>
