--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -60,6 +60,12 @@
 	-->
 		<svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 
+			<linearGradient id="verticalBorderLine">
+				<stop class="verLineFrom" offset="0%" />
+				<stop class="verLineMiddle" offset="25%" />
+				<stop class="verLineTo" offset="100%" />
+			  </linearGradient>
+			  
 			<g id='backgroundLayer' />
 			<g id='selectedTime' />
 			<g id='timeselectbar' />
