--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -63,7 +63,7 @@ transform2: scaleX(0.75);
 </head>
 
 <body>
-<p>132</p>
+
 	<p>
 		<span id='msgp'>test</span>
 
@@ -127,7 +127,7 @@ transform2: scaleX(0.75);
         <button onclick='toggleFirst();'>first</button>
 		<button onclick='testTest();'>test</button>
 	</p>
-	<pre id='statdump'>
+	<pre id='statdump'>123
 	</pre>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
