--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -13,7 +13,7 @@
 	<script type='text/javascript' src='./web/catalog.js'></script>
 	<script type='text/javascript' src='./js/tilerender.js'></script>
 
-	<link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
+	<link rel="stylesheet" type="text/css" href="theme/colordarkblue222.css">
 	<link rel="stylesheet" type="text/css" href="theme/topbar.css">
 	<link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
 	<link rel="stylesheet" type="text/css" href="theme/font1small.css">
