--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -36,8 +36,8 @@
 	<div id="pluginDiv">
 		<div id="pluginHeader">
 			<div id="pluginTitle">Plugin name and other information for identification</div>
-			<div id="pluginRefresh" onclick="commandDispatcher.resendMessagePluginGUI();">&#xf258;</div>
-			<div id="pluginCancel" onclick="commandDispatcher.cancelPluginGUI();">&#xf136;</div>
+			<div id="pluginRefresh" onclick="globalCommandDispatcher.resendMessagePluginGUI();">&#xf258;</div>
+			<div id="pluginCancel" onclick="globalCommandDispatcher.cancelPluginGUI();">&#xf136;</div>
 		</div>
 		<iframe id="pluginFrame" src="web/pluginplaceholder.html"></iframe>
 	</div>
