--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -2,6 +2,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<title>645</title>
 	<style>
 		#fogRect {
 			fill: #ff000001;
@@ -103,8 +104,8 @@ transform2: scaleX(0.75);
 		<pre id='statpurple'>purple</pre>
 		<pre id='statred'>red</pre>
 	</p>
-	<svg id='svgpane' width="1700" height="1300">
-		<rect width="1300" height="5000" rx="20" ry="20" fill="#ffe" />
+	<svg id='svgpane' width="1700" height="2300">
+		<rect width="1300" height="1470" rx="20" ry="20" fill="#ffe" />
 		<g id='levelA'></g>
 		<g id='linesLevel'></g>
 		<rect id="fogRect" x="0" y="0" width="1300" height="5000" onclick="clickFog(event);" />
