--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -78,6 +78,8 @@
 			<g id='tracksLayerZoom' />
 			<g id='leftsidebar' />
 			<g id='firstLayerZoom' />
+
+			<g id='spearsLayer' />
 			<g id='fanLayer' />
 
 			<!--<g id='mixerLayer' />
