--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -38,6 +38,12 @@
 			color: #cc0000;
 			font-size2: small;
 		}
+		#infopurple {
+			color: #666;
+		}
+		#infored {
+			color: #666;
+		}
 		#statnums{
 			color: #666666;
 
@@ -102,6 +108,8 @@ transform2: scaleX(0.75);
 		<pre id='statgrey'>grey</pre>
 		<br/>
 		<pre id='statpurple'>purple</pre>
+		<pre id='infopurple'>spurple</pre>
+		<pre id='infored'>sre</pre>
 		<pre id='statred'>red</pre>
 	</p>
 	<svg id='svgpane' width="1700" height="2300">
