--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -70,9 +70,15 @@
 				<stop class="verLineMiddle" offset="25%" />
 				<stop class="verLineTo" offset="100%" />
 			</linearGradient>
+			<linearGradient id="positionTimeMarkFill">
+				<stop class="positionMark1" offset="0%" />
+				<stop class="positionMark2" offset="75%" />
+				<stop class="positionMark3" offset="100%" />
+			</linearGradient>
 
 			<g id='backgroundLayer' />
 			<g id='selectedTime' />
+			<g id='timepositionmark' />
 			<g id='timeselectbar' />
 			<g id='gridLayerZoom' />
 			<g id='tracksLayerZoom' />
