--- a/riffshareiii/web/performers/zvoog_perf/perfui.html
+++ b/riffshareiii/web/performers/zvoog_perf/perfui.html
@@ -15,10 +15,7 @@
 
 <body>
 	<p>
-		<select id="inslist">
-			<option value="volvo">Volvo</option>
-			<option value="volvo" selected>2222</option>
-		</select>
+		<select id="inslist"></select>
 	</p>
 	<script>
 		initZPerfUI();
