--- a/riffshareiii/web/samplers/zvoog_drum_kit/drmsui.html
+++ b/riffshareiii/web/samplers/zvoog_drum_kit/drmsui.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<script src="zvoogperf_plugin.js"></script>
+	<script src="zvoogdrumkit_plugin.js"></script>
 	<style>
 		body {
 			background-color: silver;
@@ -15,10 +15,10 @@
 
 <body>
 	<p>
-		<select id="inslist"></select>
+		<select id="drlist"></select>
 	</p>
 	<script>
-		initZPerfUI();
+		initZDRUI();
 	</script>
 </body>
 
