--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -114,7 +114,7 @@
 			<g id='warningDialogGroup' />
 		</svg>
 		<script>
-			console.log('start page v1.01');
+			//console.log('start page v1.01');
 			startApplication();
 		</script>
 	</div>
