--- a/riffshareiii/ts/plugins/importfrommidi/midimusicimport.html
+++ b/riffshareiii/ts/plugins/importfrommidi/midimusicimport.html
@@ -3,8 +3,8 @@
 <head>
 	<style>
 		html {
-			--color-background: #ffffffcc;
-			(((--main-color))): #003366ff;
+			--color-background: #ccccccee;
+			--main-color: #003366ff;
 			--color-scroll: color-mix(in lab, transparent 90%, var(--main-color));
 
 			font-family: "Bruno Ace", sans-serif;
