--- a/riffshareiii/index.html
+++ b/riffshareiii/index.html
@@ -13,7 +13,7 @@
 	<script type='text/javascript' src='./web/catalog.js'></script>
 	<script type='text/javascript' src='./js/tilerender.js'></script>
 
-	<link rel="stylesheet" type="text/css" href="theme/colordarkblue222.css">
+	
 	<link rel="stylesheet" type="text/css" href="theme/topbar.css">
 	<link rel="stylesheet" type="text/css" href="theme/sizesmall.css">
 	<link rel="stylesheet" type="text/css" href="theme/font1small.css">
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" type="text/css" href="theme/plugin.css">
 	<link rel="stylesheet" type="text/css" href="theme/fanpane.css">
 
+	<link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
 
 	<title>ZvoogHub</title>
 </head>
@@ -72,7 +73,7 @@
 			</linearGradient>
 			<linearGradient id="positionTimeMarkFill">
 				<stop class="positionMark1" offset="0%" />
-				<stop class="positionMark2" offset="75%" />
+				<stop class="positionMark2" offset="95%" />
 				<stop class="positionMark3" offset="100%" />
 			</linearGradient>
 
